test: update itinerary creation with distance matrix
- Save salesman and update reference after saving.
- Fetch distance matrix before creating the itinerary.
- Ensure created itinerary has three clients scheduled.